# confluex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  confluex  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tools.json
crates/confluex/: Cargo.toml
crates/confluex-cli/: Cargo.toml
crates/confluex-cli/src/: clap_app.rs  main.rs  parser.rs
crates/confluex-core/: Cargo.toml
crates/confluex-core/src/: cli.rs  config.rs  confluence.rs  export.rs  lib.rs  links.rs  markdown.rs  output.rs  reports.rs  runtime.rs  scope.rs  security.rs  setup.rs
crates/confluex/src/: confluence.rs  lib.rs  main.rs  parser.rs  security.rs  setup.rs
designs/: 2026-05-06-confluex-cleanup-design.md  2026-05-07-confluex-pure-typescript-cleanup-design.md
docs/: AGENTS.md  CONFORMANCE-OUTCOME-MATRIX.md  FOUNDATIONS.md  FR-BASE.md  FR-CMD.md  FR-CONF.md  FR-DATA.md  FR-DIAG.md  FR-INT.md  FR-LIFE.md  FR-OBS.md  FR-OPT.md  FR-OUT.md  FR-REP.md  FR-RES.md  FR-RUN.md  FR-SAFE.md  FR-SCOPE.md  FR-SEC.md  FR-UX.md  FR-VAL.md  GLOSSARY.md  README.md  TRACEABILITY-MODEL.md  WORKFLOW-DOCTOR.md  WORKFLOW-EXPORT.md  WORKFLOW-PLAN.md  release-hygiene.md
docs/man/man1/: confluex.1
fixtures/confluence-7137/content/: manifest.json
fixtures/confluence-7137/expected/: live-command-expectations.json  live-commands.json  readability-risk.json
lib/: AGENTS.md
lib/confluex/: cli.sh  main.sh  parsers.js  util.sh
lib/confluex-node/: main.js
lib/confluex-node/cli/: diagnostics.js  help.js  parse.js  registry.js  validate.js
man/man1/: confluex.1
npm/: build-native-package.mjs  package-manifest.mjs
plans/: 2026-05-06-confluex-cleanup-implementation.md  2026-05-07-confluex-pure-typescript-cleanup-implementation.md
scripts/: check-requirements-docs.sh  install-shellcheck.sh  lint-js.js  lint-js.sh  lint-shell.js  lint-shell.sh  test-bats.sh  test-smoke.sh
src/: cli.rs  export.rs  main.ts  output.rs  scope.rs
src/confluex-node/: main.ts
tests/: AGENTS.md  migration-matrix.md
tests/bats/: 01-cli-contract.bats  02-run-modes-and-outputs.bats  03-failures-and-security.bats  04-requirements-docs-layout.bats
tests/live-bats/: 01-selftest-regression.bats  02-confluex-live-commands.bats  04-command-surface-and-validation.bats  05-doctor.bats  06-reports.bats  07-run-lifecycle-and-safety.bats  08-scope-discovery-and-findings.bats  09-config-install-security-resume.bats  live-regression.bats
tests/node/: cli-diagnostics.test.js  cli-diagnostics.test.ts  cli-help.test.js  cli-parse.test.js  cli-subprocess.test.js  cli-subprocess.test.ts  cli-validation.test.js  cli-validation.test.ts  config-command.test.js  config-env-file.test.js  config-store.test.js  doctor-command.test.js  doctor-command.test.ts  encryption-archive.test.js  encryption-recipient.test.js  export-related-command.test.js  export-related-command.test.ts  fixture-bundle-contract.test.js  install-command.test.js  internal-target.test.js  internal-target.test.ts  log-file.test.js  log-file.test.ts  manifest.test.js  output-root.test.js  output-root.test.ts  page-folder.test.js  page-folder.test.ts  path-format.test.js  payload-markdown-exporter.test.js  payload-markdown-exporter.test.ts  payload-markdown-localizer.test.js  payload-markdown.test.js  payload-markdown.test.ts  prereq-checks.test.js  prereq-checks.test.ts  remote-access.test.js  remote-access.test.ts  run-report.test.js  runtime-footprint.test.js  (+15 more)
tools/: verify-public-cleanup.ts
xtask/: Cargo.toml
xtask/src/: archive.rs  main.rs  process.rs  publish.rs  release.rs  versioning.rs
(+166 files in other folders)
