[package]
name = "confluex"
version = "0.0.2"
description = "Export Confluence pages to Markdown from the command line."
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/gromoff97/confluex"
rust-version = "1.88"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/docs/man/man1/confluex.1",
  "/src/**",
]

[[bin]]
name = "confluex"
path = "src/main.rs"

[dependencies]
camino = { version = "1.2.2", features = ["serde1"] }
cap-std = { version = "4.0.2", features = ["fs_utf8"] }
comrak = "0.52.0"
fs-err = "3.3.0"
h2m = "0.7.1"
quick-xml = { version = "0.39.3", features = ["serialize"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "stream", "gzip", "deflate", "system-proxy"] }
rpassword = "7.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "time", "sync", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "time"] }
