[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
camino.workspace = true
flate2 = "1.1.9"
fs-err.workspace = true
semver = "1.0.28"
sha2 = "0.11.0"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror.workspace = true
toml_edit = "0.25.11"
walkdir.workspace = true
