[package]
name = "confluex"
version = "0.0.0"
description = "Export Confluence pages to Markdown from the command line."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "confluex"
path = "src/main.rs"

[dependencies]
camino.workspace = true
cap-std.workspace = true
comrak.workspace = true
fs-err.workspace = true
h2m.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
walkdir.workspace = true
zip.workspace = true
